--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!--end-->
     <div class="peace">
         <div class="wrapper">
-            <header>Pictionary -a dictionary redifined.</header>
+            <header>Pictionary -a dictionary redefined.</header>
             <div class="search">
                 <input type="text" placeholder="Search a word" required spellcheck="false">
                 <i class="fas fa-search"></i>
