--- a/index.html
+++ b/index.html
@@ -140,7 +140,15 @@
         </div>
     </div>
     <script src="script.js"></script>
-
+    <footer>
+        <div class="ty">
+            THANK YOU
+        </div>
+        <!--PEACE_DEV@2022-->
+        <div class="dev">
+            <a href="https://github.com/peacekeeper09">PEACE_DEV@2022</a>
+        </div>
+    </footer>
 </body>
 
 </html>
